[gd_scene load_steps=3 format=3 uid="uid://bvpn7x3rcqm2e"]

[ext_resource type="Script" path="res://src/ui/prism_lens_view.gd" id="1_view"]
[ext_resource type="Script" path="res://src/ui/pattern_display.gd" id="2_pattern"]

[node name="PrismLensView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_view")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0.03, 0.08, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "SPECTRAL LENS READER"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer/TitleBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "WAITING FOR CALIBRATION"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MainContent" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SignalPanel" type="Panel" parent="VBoxContainer/MainContent"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/SignalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="PatternContainer" type="CenterContainer" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PatternDisplay" type="Control" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer/PatternContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
script = ExtResource("2_pattern")

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PatternNameLabel" type="Label" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Shape: None"
horizontal_alignment = 1

[node name="ColorNameLabel" type="Label" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Color: None"
horizontal_alignment = 1

[node name="CategoryLabel" type="Label" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Category: Unknown"
horizontal_alignment = 1

[node name="ConsistencyLabel" type="Label" parent="VBoxContainer/MainContent/SignalPanel/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Reading: ---"
horizontal_alignment = 1

[node name="NoSignalPanel" type="Panel" parent="VBoxContainer/MainContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MainContent/NoSignalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/NoSignalPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NoSignalIcon" type="Label" parent="VBoxContainer/MainContent/NoSignalPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "?"
horizontal_alignment = 1

[node name="NoSignalLabel" type="Label" parent="VBoxContainer/MainContent/NoSignalPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "NO SIGNAL"
horizontal_alignment = 1

[node name="WaitingLabel" type="Label" parent="VBoxContainer/MainContent/NoSignalPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Waiting for Calibrator to lock alignment..."
horizontal_alignment = 1

[node name="ReferenceGuide" type="PanelContainer" parent="VBoxContainer/MainContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContent/ReferenceGuide"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GuideTitle" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "REFERENCE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShapesTitle" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Shapes:"

[node name="Triangle" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Triangle = Passive"

[node name="Circle" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Circle = Aggressive"

[node name="Square" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Square = Territorial"

[node name="Spiral" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Spiral = Mobile"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorsTitle" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Colors:"

[node name="BlueViolet" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.5, 0.3, 0.8, 1)
text = "Blue-Violet = Passive"

[node name="RedOrange" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.9, 0.35, 0.2, 1)
text = "Red-Orange = Aggressive"

[node name="Green" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.2, 0.85, 0.35, 1)
text = "Green = Territorial"

[node name="Yellow" type="Label" parent="VBoxContainer/MainContent/ReferenceGuide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.95, 0.85, 0.2, 1)
text = "Yellow = Mobile"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ProgressContainer" type="VBoxContainer" parent="VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="RecordingLabel" type="Label" parent="VBoxContainer/BottomBar/ProgressContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Recording Progress"

[node name="RecordingProgress" type="ProgressBar" parent="VBoxContainer/BottomBar/ProgressContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="RecordButton" type="Button" parent="VBoxContainer/BottomBar"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "RECORD READING"
